# PCSC-MonteCarlo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md  example.txt  input.txt  main.cpp  stats.csv  test.cpp
docs/: CMakeLists.txt  Doxyfile.in
eigen/unsupported/test/: CMakeLists.txt
mc/: clt.hpp  clt.tpp  csvwriter.tpp  distributions.cpp  distributions.hpp  distributions.tpp  exceptions.hpp  functions.cpp  functions.hpp  functions.tpp  io.cpp  io.hpp  io.tpp  main.cpp  mathutils.cpp  mathutils.hpp  mca.hpp  mca.tpp  output.cpp  sampler.hpp  sampler.tpp  vector.hpp  vector.tpp
src/: CMakeLists.txt
tests/: TODO.md  distribution_test.cpp  distributions_samples.cpp  function_test.cpp  mathutils.cpp  polynomial_test.cpp  sampler_test.cpp  test.cpp  vector_test.cpp
tex/: presentation.tex  settings.tex
